--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,15 +8,15 @@ project (Bazinga)
 include_directories (lua/lua-5.2.2/src/)
 
 # Adiciona lib lua
-add_library(lualib SHARED IMPORTED)
-set_target_properties(lualib PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/lua/lua-5.2.2/src/liblua.a)
+add_library(lualib STATIC IMPORTED)
+set_target_properties(lualib PROPERTIES IMPORTED_LOCATION "${CMAKE_SOURCE_DIR}/lua/lua-5.2.2/src/liblua.a")
 
 # Compila Lua 5.2.2
 ADD_CUSTOM_TARGET(
   lua.o ALL
-  COMMAND ${CMAKE_MAKE_PROGRAM} linux
-  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lua/lua-5.2.2
-COMMENT "Original lua-5.2.2 makefile target")
+  COMMAND ${CMAKE_MAKE_PROGRAM} ansi
+  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/lua/lua-5.2.2
+COMMENT "Compilando Lua 5.2.2 (com o Makefile original)")
 
 # Compila o executável principal
 add_executable (bazinga bazinga.cpp)
