Working compilation (again) on windows.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,6 @@ ADD_DEFINITIONS(
     # Other flags
 )
 
-# Detecta a plataforma na qual vamos compilar
-# TODO
-IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-	SET(OS "linux")
-ELSE ()
-	SET(OS "windows")
-ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-
 # Vamos compilar a Bazinga Engine
 project (Bazinga)
 
@@ -31,7 +23,7 @@ add_library(lualib STATIC IMPORTED)
 set_target_properties(lualib PROPERTIES IMPORTED_LOCATION "${CMAKE_SOURCE_DIR}/lua/lua-5.2.2/src/liblua.a")
 
 # Adiciona libs da SDL (se estiver no windows)
-IF (${OS} EQUAL "windows")
+IF (WIN32)
 add_library(libSDL STATIC IMPORTED)
 set_target_properties(libSDL PROPERTIES IMPORTED_LOCATION "${CMAKE_SOURCE_DIR}/sdl/windows/libSDL.dll.a")
 add_library(libSDLmain STATIC IMPORTED)
@@ -39,7 +31,7 @@ set_target_properties(libSDLmain PROPERTIES IMPORTED_LOCATION "${CMAKE_SOURCE_DI
 # Adiciona libs da DevIL
 add_library(devil STATIC IMPORTED)
 set_target_properties(devil PROPERTIES IMPORTED_LOCATION "${CMAKE_SOURCE_DIR}/build/DevIL.lib")
-ENDIF(${OS} EQUAL "windows")
+ENDIF(WIN32)
 
 # Compila Lua 5.2.2
 ADD_CUSTOM_TARGET(
@@ -52,19 +44,22 @@ COMMENT "Compilando Lua 5.2.2 (com o Makefile original)")
 add_executable (bazinga bazinga.cpp json.cpp filesystem.cpp object.cpp map.cpp video.cpp cache.cpp)
 
 # Linka com (opengl, lua, sdl, devil)
-IF (${OS} EQUAL "windows")
+IF (WIN32)
 target_link_libraries (bazinga glu32 opengl32)
 target_link_libraries (bazinga mingw32)
 target_link_libraries (bazinga libSDLmain)
 target_link_libraries (bazinga libSDL)
-ENDIF (${OS} EQUAL "windows")
+ENDIF (WIN32)
 
 target_link_libraries (bazinga lualib)
 
-IF (${OS} EQUAL "windows")
+IF (WIN32)
 target_link_libraries (bazinga devil)
-ELSE ()
+ENDIF (WIN32)
+
+IF (UNIX)
 target_link_libraries (bazinga IL GL SDL)
-ENDIF ()
+ENDIF (UNIX)
+
 # Dependencias
 ADD_DEPENDENCIES (lualib lua.o)
