Added SDL static libs & modified gitignore for this

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 # Ignore build files
 build/
 # Ignore compiled files
-# Except the SDL ones (future)
-*.o
-*.a
+# TODO: add if needed
 # Ignore compressed files
 *.tar.gz
 # Executáveis da Lua
