Many improvements in text. GUI basics.
Also:
multiple scenes;
image self-render;
circle rendering;
fixed LOTS of text-related things.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,7 +126,11 @@ add_executable (bazinga bazinga.cpp
                         image.cpp
                         text.cpp
                         shader.cpp
-                        gl/glwin.cpp)
+                        gl/glwin.cpp
+                        gui.cpp
+                        gui/label.cpp
+                        gui/button.cpp
+                        gui/spacer.cpp)
 
 # Linka com (opengl, lua, sdl, devil)
 IF (WIN32)
