Better, interactive UI.
A lot of work in the GUI. It only needs more widgets and window stacking
to become fully functional.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,7 +130,10 @@ add_executable (bazinga bazinga.cpp
                         gui.cpp
                         gui/label.cpp
                         gui/button.cpp
-                        gui/spacer.cpp)
+                        gui/spacer.cpp
+                        gui/slider.cpp
+                        gui/progress.cpp
+                        gui/rwidget.cpp)
 
 # Linka com (opengl, lua, sdl, devil)
 IF (WIN32)
