--- a/ogg/libvorbis-1.3.4/lib/books/uncoupled/Makefile
+++ b/ogg/libvorbis-1.3.4/lib/books/uncoupled/Makefile
@@ -48,9 +48,9 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-build_triplet = i686-pc-mingw32
-host_triplet = i686-pc-mingw32
-target_triplet = i686-pc-mingw32
+build_triplet = x86_64-unknown-linux-gnu
+host_triplet = x86_64-unknown-linux-gnu
+target_triplet = x86_64-unknown-linux-gnu
 subdir = lib/books/uncoupled
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -71,23 +71,23 @@ am__can_run_installinfo = \
     *) (install-info --version) >/dev/null 2>&1;; \
   esac
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /c/Users/Felipe/Documents/Development/bazingatesting/ogg/libvorbis-1.3.4/missing --run aclocal-1.11
+ACLOCAL = ${SHELL} /home/ccsl/Development/bazingatesting/ogg/libvorbis-1.3.4/missing --run aclocal-1.11
 ACLOCAL_AMFLAGS = -I m4
 ALLOCA = 
 AMTAR = $${TAR-tar}
 AR = ar
 AS = as
-AUTOCONF = ${SHELL} /c/Users/Felipe/Documents/Development/bazingatesting/ogg/libvorbis-1.3.4/missing --run autoconf
-AUTOHEADER = ${SHELL} /c/Users/Felipe/Documents/Development/bazingatesting/ogg/libvorbis-1.3.4/missing --run autoheader
-AUTOMAKE = ${SHELL} /c/Users/Felipe/Documents/Development/bazingatesting/ogg/libvorbis-1.3.4/missing --run automake-1.11
-AWK = gawk
+AUTOCONF = ${SHELL} /home/ccsl/Development/bazingatesting/ogg/libvorbis-1.3.4/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/ccsl/Development/bazingatesting/ogg/libvorbis-1.3.4/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/ccsl/Development/bazingatesting/ogg/libvorbis-1.3.4/missing --run automake-1.11
+AWK = mawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
-CFLAGS = -O20 -Wall -Wextra -D__NO_MATH_INLINES -fsigned-char -Wdeclaration-after-statement  -DUSE_MEMORY_H
+CFLAGS = -O20 -Wall -Wextra -ffast-math -D_REENTRANT -fsigned-char -Wdeclaration-after-statement  -DUSE_MEMORY_H
 CPP = gcc -E
 CPPFLAGS = 
 CYGPATH_W = echo
-DEBUG = -g -Wall -Wextra -D__NO_MATH_INLINES -fsigned-char
+DEBUG = -g -Wall -Wextra -D_REENTRANT -D__NO_MATH_INLINES -fsigned-char
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
 DLLTOOL = dlltool
@@ -97,35 +97,35 @@ ECHO_C =
 ECHO_N = -n
 ECHO_T = 
 EGREP = /bin/grep -E
-EXEEXT = .exe
+EXEEXT = 
 FGREP = /bin/grep -F
 GREP = /bin/grep
 HAVE_DOXYGEN = false
 HTLATEX = 
-INSTALL = /bin/install -c
+INSTALL = /usr/bin/install -c
 INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
 INSTALL_SCRIPT = ${INSTALL}
 INSTALL_STRIP_PROGRAM = $(install_sh) -c -s
-LD = c:/mingw/mingw32/bin/ld.exe
+LD = /usr/bin/ld -m elf_x86_64
 LDFLAGS = 
 LIBOBJS = 
 LIBS = 
 LIBTOOL = $(SHELL) $(top_builddir)/libtool
 LIBTOOL_DEPS = ./ltmain.sh
 LIPO = 
-LN_S = cp -p
+LN_S = ln -s
 LTLIBOBJS = 
 MAINT = #
-MAKEINFO = ${SHELL} /c/Users/Felipe/Documents/Development/bazingatesting/ogg/libvorbis-1.3.4/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/ccsl/Development/bazingatesting/ogg/libvorbis-1.3.4/missing --run makeinfo
 MANIFEST_TOOL = :
 MKDIR_P = /bin/mkdir -p
-NM = /c/MinGW/bin/nm
+NM = /usr/bin/nm -B
 NMEDIT = 
 OBJDUMP = objdump
 OBJEXT = o
-OGG_CFLAGS = -I/usr/local/include
-OGG_LIBS = -L/usr/local/lib -logg
+OGG_CFLAGS = -I/usr/local/include  
+OGG_LIBS = -L/usr/local/lib -logg  
 OTOOL = 
 OTOOL64 = 
 PACKAGE = libvorbis
@@ -137,12 +137,12 @@ PACKAGE_URL =
 PACKAGE_VERSION = 1.3.4
 PATH_SEPARATOR = :
 PDFLATEX = 
-PKG_CONFIG = 
-PROFILE = -O20 -g -pg -D__NO_MATH_INLINES -fsigned-char
+PKG_CONFIG = /usr/bin/pkg-config
+PROFILE = -pg -g -O20 -ffast-math -D_REENTRANT -fsigned-char
 RANLIB = ranlib
 SED = /bin/sed
 SET_MAKE = 
-SHELL = /bin/sh
+SHELL = /bin/bash
 STRIP = strip
 VERSION = 1.3.4
 VE_LIB_AGE = 0
@@ -155,10 +155,10 @@ VORBIS_LIBS = -lm
 V_LIB_AGE = 4
 V_LIB_CURRENT = 4
 V_LIB_REVISION = 7
-abs_builddir = /c/Users/Felipe/Documents/Development/bazingatesting/ogg/libvorbis-1.3.4/lib/books/uncoupled
-abs_srcdir = /c/Users/Felipe/Documents/Development/bazingatesting/ogg/libvorbis-1.3.4/lib/books/uncoupled
-abs_top_builddir = /c/Users/Felipe/Documents/Development/bazingatesting/ogg/libvorbis-1.3.4
-abs_top_srcdir = /c/Users/Felipe/Documents/Development/bazingatesting/ogg/libvorbis-1.3.4
+abs_builddir = /home/ccsl/Development/bazingatesting/ogg/libvorbis-1.3.4/lib/books/uncoupled
+abs_srcdir = /home/ccsl/Development/bazingatesting/ogg/libvorbis-1.3.4/lib/books/uncoupled
+abs_top_builddir = /home/ccsl/Development/bazingatesting/ogg/libvorbis-1.3.4
+abs_top_srcdir = /home/ccsl/Development/bazingatesting/ogg/libvorbis-1.3.4
 ac_ct_AR = ar
 ac_ct_CC = gcc
 ac_ct_DUMPBIN = 
@@ -168,26 +168,26 @@ am__quote =
 am__tar = $${TAR-tar} chof - "$$tardir"
 am__untar = $${TAR-tar} xf -
 bindir = ${exec_prefix}/bin
-build = i686-pc-mingw32
+build = x86_64-unknown-linux-gnu
 build_alias = 
-build_cpu = i686
-build_os = mingw32
-build_vendor = pc
+build_cpu = x86_64
+build_os = linux-gnu
+build_vendor = unknown
 builddir = .
 datadir = ${datarootdir}
 datarootdir = ${prefix}/share
 docdir = ${datarootdir}/doc/${PACKAGE_TARNAME}
 dvidir = ${docdir}
 exec_prefix = ${prefix}
-host = i686-pc-mingw32
+host = x86_64-unknown-linux-gnu
 host_alias = 
-host_cpu = i686
-host_os = mingw32
-host_vendor = pc
+host_cpu = x86_64
+host_os = linux-gnu
+host_vendor = unknown
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /c/Users/Felipe/Documents/Development/bazingatesting/ogg/libvorbis-1.3.4/install-sh
+install_sh = ${SHELL} /home/ccsl/Development/bazingatesting/ogg/libvorbis-1.3.4/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
@@ -199,16 +199,16 @@ pdfdir = ${docdir}
 prefix = /usr/local
 program_transform_name = s,x,x,
 psdir = ${docdir}
-pthread_lib = 
+pthread_lib = -lpthread
 sbindir = ${exec_prefix}/sbin
 sharedstatedir = ${prefix}/com
 srcdir = .
 sysconfdir = ${prefix}/etc
-target = i686-pc-mingw32
+target = x86_64-unknown-linux-gnu
 target_alias = 
-target_cpu = i686
-target_os = mingw32
-target_vendor = pc
+target_cpu = x86_64
+target_os = linux-gnu
+target_vendor = unknown
 top_build_prefix = ../../../
 top_builddir = ../../..
 top_srcdir = ../../..
