--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,8 +107,8 @@ ExternalProject_Add(
   -DCMAKE_CXX_FLAGS=-std=c++11
   -DCMAKE_MAKE_PROGRAM=make
   -DCMAKE_AR=ar
-  #-DCMAKE_C_LINK_EXECUTABLE=ld
-  #-DCMAKE_CXX_LINK_EXECUTABLE=ld
+  -DCMAKE_C_LINK_EXECUTABLE=ld
+  -DCMAKE_CXX_LINK_EXECUTABLE=ld
 )
 ENDIF(UNIX)
 
