Compilling under windows.

--- a/ogg/libogg-1.3.2/doc/Makefile
+++ b/ogg/libogg-1.3.2/doc/Makefile
@@ -76,8 +76,8 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-build_triplet = x86_64-unknown-linux-gnu
-host_triplet = x86_64-unknown-linux-gnu
+build_triplet = i686-pc-mingw32
+host_triplet = i686-pc-mingw32
 subdir = doc
 DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/Makefile.am \
 	$(dist_html_DATA)
@@ -199,42 +199,42 @@ am__relativize = \
     dir1=`echo "$$dir1" | sed -e "$$sed_rest"`; \
   done; \
   reldir="$$dir2"
-ACLOCAL = ${SHELL} /home/ccsl/Development/bazingatesting/ogg/libogg-1.3.2/missing aclocal-1.13
+ACLOCAL = ${SHELL} /c/Users/Felipe/Documents/Development/bazingatesting/ogg/libogg-1.3.2/missing aclocal-1.13
 AMTAR = $${TAR-tar}
 AM_DEFAULT_VERBOSITY = 1
 AR = ar
-AUTOCONF = ${SHELL} /home/ccsl/Development/bazingatesting/ogg/libogg-1.3.2/missing autoconf
-AUTOHEADER = ${SHELL} /home/ccsl/Development/bazingatesting/ogg/libogg-1.3.2/missing autoheader
-AUTOMAKE = ${SHELL} /home/ccsl/Development/bazingatesting/ogg/libogg-1.3.2/missing automake-1.13
-AWK = mawk
+AUTOCONF = ${SHELL} /c/Users/Felipe/Documents/Development/bazingatesting/ogg/libogg-1.3.2/missing autoconf
+AUTOHEADER = ${SHELL} /c/Users/Felipe/Documents/Development/bazingatesting/ogg/libogg-1.3.2/missing autoheader
+AUTOMAKE = ${SHELL} /c/Users/Felipe/Documents/Development/bazingatesting/ogg/libogg-1.3.2/missing automake-1.13
+AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
-CFLAGS = -O20 -Wall -ffast-math -fsigned-char -g -O2
+CFLAGS = -O20 -fsigned-char -g -O2
 CPP = gcc -E
 CPPFLAGS = 
 CYGPATH_W = echo
 DEBUG = -g -Wall -fsigned-char -g -O2
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
-DLLTOOL = false
+DLLTOOL = dlltool
 DSYMUTIL = 
 DUMPBIN = 
 ECHO_C = 
 ECHO_N = -n
 ECHO_T = 
 EGREP = /bin/grep -E
-EXEEXT = 
+EXEEXT = .exe
 FGREP = /bin/grep -F
 GREP = /bin/grep
 INCLUDE_INTTYPES_H = 1
 INCLUDE_STDINT_H = 1
 INCLUDE_SYS_TYPES_H = 1
-INSTALL = /usr/bin/install -c
+INSTALL = /bin/install -c
 INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
 INSTALL_SCRIPT = ${INSTALL}
 INSTALL_STRIP_PROGRAM = $(install_sh) -c -s
-LD = /usr/bin/ld -m elf_x86_64
+LD = c:/mingw/mingw32/bin/ld.exe
 LDFLAGS = 
 LIBOBJS = 
 LIBS = 
@@ -244,13 +244,13 @@ LIB_AGE = 8
 LIB_CURRENT = 8
 LIB_REVISION = 2
 LIPO = 
-LN_S = ln -s
+LN_S = cp -pR
 LTLIBOBJS = 
 MAINT = 
-MAKEINFO = ${SHELL} /home/ccsl/Development/bazingatesting/ogg/libogg-1.3.2/missing makeinfo
+MAKEINFO = ${SHELL} /c/Users/Felipe/Documents/Development/bazingatesting/ogg/libogg-1.3.2/missing makeinfo
 MANIFEST_TOOL = :
 MKDIR_P = /bin/mkdir -p
-NM = /usr/bin/nm -B
+NM = /c/MinGW/bin/nm
 NMEDIT = 
 OBJDUMP = objdump
 OBJEXT = o
@@ -265,11 +265,11 @@ PACKAGE_TARNAME = libogg
 PACKAGE_URL = 
 PACKAGE_VERSION = 1.3.2
 PATH_SEPARATOR = :
-PROFILE = -Wall -W -pg -g -O20 -ffast-math -fsigned-char -g -O2
+PROFILE = -O20 -g -pg -fsigned-char -g -O2
 RANLIB = ranlib
 SED = /bin/sed
 SET_MAKE = 
-SHELL = /bin/bash
+SHELL = /bin/sh
 SIZE16 = int16_t
 SIZE32 = int32_t
 SIZE64 = int64_t
@@ -277,10 +277,10 @@ STRIP = strip
 USIZE16 = uint16_t
 USIZE32 = uint32_t
 VERSION = 1.3.2
-abs_builddir = /home/ccsl/Development/bazingatesting/ogg/libogg-1.3.2/doc
-abs_srcdir = /home/ccsl/Development/bazingatesting/ogg/libogg-1.3.2/doc
-abs_top_builddir = /home/ccsl/Development/bazingatesting/ogg/libogg-1.3.2
-abs_top_srcdir = /home/ccsl/Development/bazingatesting/ogg/libogg-1.3.2
+abs_builddir = /c/Users/Felipe/Documents/Development/bazingatesting/ogg/libogg-1.3.2/doc
+abs_srcdir = /c/Users/Felipe/Documents/Development/bazingatesting/ogg/libogg-1.3.2/doc
+abs_top_builddir = /c/Users/Felipe/Documents/Development/bazingatesting/ogg/libogg-1.3.2
+abs_top_srcdir = /c/Users/Felipe/Documents/Development/bazingatesting/ogg/libogg-1.3.2
 ac_ct_AR = ar
 ac_ct_CC = gcc
 ac_ct_DUMPBIN = 
@@ -290,26 +290,26 @@ am__quote =
 am__tar = $${TAR-tar} chof - "$$tardir"
 am__untar = $${TAR-tar} xf -
 bindir = ${exec_prefix}/bin
-build = x86_64-unknown-linux-gnu
+build = i686-pc-mingw32
 build_alias = 
-build_cpu = x86_64
-build_os = linux-gnu
-build_vendor = unknown
+build_cpu = i686
+build_os = mingw32
+build_vendor = pc
 builddir = .
 datadir = ${datarootdir}
 datarootdir = ${prefix}/share
 docdir = ${datarootdir}/doc/${PACKAGE_TARNAME}
 dvidir = ${docdir}
 exec_prefix = ${prefix}
-host = x86_64-unknown-linux-gnu
+host = i686-pc-mingw32
 host_alias = 
-host_cpu = x86_64
-host_os = linux-gnu
-host_vendor = unknown
+host_cpu = i686
+host_os = mingw32
+host_vendor = pc
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/ccsl/Development/bazingatesting/ogg/libogg-1.3.2/install-sh
+install_sh = ${SHELL} /c/Users/Felipe/Documents/Development/bazingatesting/ogg/libogg-1.3.2/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
