Loading from any folder in the system.
(currently only in posix systems)
* ANSI Lua compilation;
* fixed some deinitialization (of fonts);
* LAPI search_object now also supports integer keys (ids).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,7 +92,7 @@ set_target_properties(bazingares PROPERTIES IMPORTED_LOCATION "bazinga.res")
 # Compila Lua 5.2.2
 ADD_CUSTOM_TARGET(
   lua.o ALL
-  COMMAND ${CMAKE_MAKE_PROGRAM} generic
+  COMMAND ${CMAKE_MAKE_PROGRAM} ansi
   WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/lua/lua-5.2.2
 COMMENT "Compilando Lua 5.2.2 (com o Makefile original)")
 
